--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
-<!DOCTYPE html>
+TYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
     <meta charset="UTF-8">
     <script src="https://cdn.staticfile.net/popper.js/2.9.3/umd/popper.min.js"></script>
     <script src="https://cdn.staticfile.net/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="a1_css.css">
     <title>Home page</title>
     <style>
         body{
-        background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/memphis-colorful.png");
-    }
-    .text-center{
-        font-weight: bold;
-    }
+            background-image: url("https://www.toptal.com/designers/subtlepatterns/uploads/memphis-colorful.png");
+        }
+        .text-center{
+            font-weight: bold;
+        }
         .footer {
             padding:0px;
             text-align: center;
             background: black;
             margin-top: 0px;
         }
+
+
     </style>
+    <title>Web Portfolio</title>
 </head>
 <body>
+
 <div class="container-fluid pt-3">
     <div class="row-fluid">
         <div class="span12"><span class="caret"></span>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                      Home Page
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <li><a class="dropdown-item" href="HomePage.html">Home Page</a></li>
-                        <li><a class="dropdown-item" href="About%20Me%20Page.html">About Me</a></li>
-                        <li><a class="dropdown-item" href="a1_project.html">My Projects</a></li>
-                        <li><a class="dropdown-item" href="a1_blog.html">My Blogs</a></li>
-                        <li><a class="dropdown-item" href="a1_contact.html">How to contact us</a></li>
-                    </ul>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                    Home Page
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <li><a class="dropdown-item" href="#secopage">About Me</a></li>
+                    <li><a class="dropdown-item" href="#thirpage">My Projects</a></li>
+                    <li><a class="dropdown-item" href="#fopage">My Blogs</a></li>
+                    <li><a class="dropdown-item" href="#fifpage">How to contact us</a></li>
+                </ul>
 
 
             </div>
@@ -58,29 +63,171 @@
                 </div>
             </div>
             <div class="container">
-            <div class="row">
+                <div class="row">
 
-                <div class="col-md-9" style="text-align: right">
-                    <br><br>
-                    <p class="text-right">
-                        <em>Student name: Tianzhuo Li &amp;</em> <em>Qirui Luo</em>
-                    </p>
-                    <p class="text-right">
-                        <em>Student number: 219634625</em>
-                    </p>
-                    <p class="text-right">
-                        <em>220014130</em>
-                    </p>
-                    <p class="text-right">
-                    </p>
+                    <div class="col-md-9" style="text-align: right">
+                        <br><br>
+                        <p class="text-right">
+                            <em>Student name: Tianzhuo Li &amp;</em> <em>Qirui Luo</em>
+                        </p>
+                        <p class="text-right">
+                            <em>Student number: 219634625</em>
+                        </p>
+                        <p class="text-right">
+                            <em>220014130</em>
+                        </p>
+                        <p class="text-right">
+                        </p>
+                    </div>
                 </div>
-            </div>
             </div>
         </div>
     </div>
 </div>
+<div><br><br><br><br></div>
+        <h1 id="secopage" style="text-align: center">
+            About me
+        </h1>
+        <div style="width: 400px">
+            <div class="constrainer" >
+                <ul style="background: none; margin: 0%;
+                    padding: 0px;">
+
+                    <li>
+                        <strong>Web Design: </strong>
+                    </li>
+                    <br>
+                    <li>
+                        HTML, CSS, JavaScript
+                    </li>
+                    <br>
+                    <li>
+                        <strong>
+                            Interests:
+                        </strong>
+                    </li>
+                    <li>
+                        Staying updated with the latest trends in web and graphic design.
+                    </li>
+                    <li>
+                        Photography and incorporating visual elements into design work.
+                    </li>
+                    <li>
+                        Reading books on design, technology, and personal development.
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="constrainer">
+        <div class="span8">
+            <div class='embed-responsive' style='padding-bottom:10%'>
+                <iframe src="Evelyn%20Li%20Resume.pdf" width="100%" height="500px" style="border: none;"></iframe>
+            </div>
+
+
+        </div>
+        <div style="text-align: center">
+            <a href="Evelyn%20Li%20Resume.pdf" download="Resume.pdf">
+                <button type="button" onclick="downloadit">Download</button>
+            </a></div>
+        <br>
+    </div>
+
+<div class="header">
+    <h2 id="thirpage">Project</h2>
+</div>
+
+
+<div class="row">
+    <div class="leftcolumn">
+        <div class="blank">
+            <h3>iFixit Project</h3>
+            <a href="https://www.ifixit.com/Guide/Razer+Blade+2014+Battery+Replacement/169768">Click to view the project</a>
+            <div class="imgp"><img src="C:/Users/Ray Luo/Desktop/a1/ifixit.jpg" alt="fix" width="300"></a><p>I created a guide on repairing a laptop's battery that makes it easy for anyone viewing the guide to repair their laptop via iFixit. Through the different steps of creating the guide I am constantly improving myself and getting a lot out of it.</p></div><br>
+        </div>
+    </div>
+    <div class="rightcolumn">
+        <div class="blank">
+            <h2 style="font-style:italic; font-family:Times New Roman;">Check point 1</h2>
+            <p style="font-style:italic; font-family:Times New Roman;">In check point 1, I need to find a guide to use as a reference to understand how to add appropriate photos for each step of my own guide. After learning about iFixit's guide, “How to Take Awesome Photos,” I had a primer on how to create a guide based on the needs of my audience. At each step I needed to think about what images would be most helpful from the viewer's point of view. For example, an image with a clear, bright background was not enough, but rather zooming in and out of small steps or adding circles or arrows to make it easier for the viewer to follow each step visually. And when a step is covered by other small steps, it can be easier for the viewer to understand them by using different colored markers. This exercise has improved my ability to investigate information through the viewer's perspective to get to the heart of what is really needed and to use that information to solve problems, which is a skill that will be effective in any future endeavor in any field.</p>
+        </div>
+        <div class="blank">
+            <h2 style="font-style:italic; font-family:Times New Roman;">Check point 2</h2>
+            <p style="font-style:italic; font-family:Times New Roman;">In check point 2, same as in check point 1, we need to find a guide as a reference to learn how to write step text that matches the image. After studying iFixit's guide “Write Guide Text”, my step text has improved a lot because it uses the same skill as in Check point 1, i.e., viewing the step text from the viewer's point of view. I had a hard challenge writing the guide text because many of the repair parts in the pictures do not have an exact name and the viewer does not always know the terminology, so I had to write the guide text in a way that the viewer would recognize the part by describing the appearance of the part and its color as much as possible. Also, in order for any viewer to understand the steps, each sentence in the text should be as concise and detailed as possible. For example, the text "unscrewing a screw with a screwdriver" can be written as "using a Phillips screwdriver to clockwise unscrew the screws. These writing skills can massively improve the content I produce in different contexts, for example if I am writing a report, my text and writing does not need to be as detailed as a guide, but rather a well-planned summary of all the content as much as possible. These skills can make a difference in any future writing required in any field.</p>
+        </div>
+        <div class="blank">
+            <h2 style="font-style:italic; font-family:Times New Roman;">Peer review</h2>
+            <p style="font-style:italic; font-family:Times New Roman;">Before the final version of the Fast Fix project is finished, I need to improve my guide based on two peer reviews. Based on the feedback from the peer reviews I improved the images in each of my steps, and I made the parts of the images that needed to be indented with a circle of a specific color to ensure that the viewer could find the corresponding text when looking at the text in the step. Although the peer review feedback indicated that the reinstallation step could have been omitted, I kept the reinstallation section of the repair guide because from the viewer's point of view continuing to follow the reinstallation step with clear pictures and introductory text in the guide after the repair is complete makes the guide more complete than thinking about the reinstallation step in reverse. Improving the content based on feedback while still maintaining a different perspective ensures completeness that can be effectively utilized in future work. </p>
+        </div>
+    </div>
+</div>
+<div><br><br></div>
+<div class="header">
+    <h2 id="fopage">Blog Page</h2>
+</div>
+
+
+
+<div class="row">
+    <div class="leftcolumn">
+        <div class="blank">
+            <h3>Popular Post</h3>
+            <div class="imgp"><a href="https://w2prod.sis.yorku.ca/Apps/WebObjects/cdm">Yorku Rem</a></div><br>
+            <div class="imgp"><a href="https://www.yorku.ca/">Yorku</a></div><br>
+            <div class="imgp"><a href="https://www.yorku.ca/global-engagement/">Yorku international</a></div>
+        </div>
+    </div>
+
+    <div class="rightcolumn">
+        <div class="blank">
+            <h2>Summer term reading break</h2>
+            <h5>June 15, 2024</h5>
+            <div class="imgp" style="height:400px" ><img src="C:/Users/Ray Luo/Desktop/a1/summer.jpg" alt="summmer" width="500"><p>Summer Reading break begin from June 17th to June 22th</P></div>
+            <p>Learn more from <a href="https://registrar.yorku.ca/enrol/dates/2023-2024/summer">Yorku summer important dates</a></p>
+        </div>
+
+        <div class="blank">
+            <h2>Summer exam period</h2>
+            <h5>July 2nd, 2024</h5>
+            <div class="imgp" style="height:400px;"><img src="C:/Users/Ray Luo/Desktop/a1/exam.jpg" alt="exam" width="500"><p>Summer exam period begin from Aug 16th to Aug 23th</p></div>
+            <p>Learn more from <a href="https://registrar.yorku.ca/enrol/dates/2023-2024/summer">Yorku summer exam period</a></p>
+        </div>
+    </div>
+</div>
+<div><br><br></div>
+<div class="header">
+    <h2 id="fifpage">How to contact us</h2>
+</div>
+
+
+<form action="">
+    <div class="blank"><label> Name: </label>
+        <input type="text" name="name" size="30"/> </div>
+    <br />
+
+    <div class="blank"><label> Subject: </label>
+        <input type="text" name="subject" size="30"/> </div>
+    <br />
+
+    <div class="blank"><p><label> text: </label></p>
+        <textarea id="text" name="text" rows="5" cols="50"></textarea></div>
+    <br />
+
+    <div class="blank"><label> email: </label>
+        <input type="email" placeholder="example@example.com"/> </div>
+    <br />
+
+    <input type="submit" value="Submit">
+    <div><br></div>
 <div class="footer">
     <p style="color:white;">Background picture is from <a href="https://www.toptal.com/designers/subtlepatterns/" style="color:white;">Toptal</a></p></br>
+    <p style="color:white;">Linkink to iFixit photo guide <a href="https://www.ifixit.com/Guide/How+to+Take+Awesome+Smartphone+Photos/95223" style="color:white;">"How to take photo"</a></p></br>
+    <p style="color:white;">Link to iFixit word guide <a href="https://edu.ifixit.com/write-guide-text-ff" style="color:white;">"How to write proper guide word"</a></p>
+</div>
+</body>
+</html>
 
 </div>
 </body>
